# entity-sim

./: README.md  compile_lib_and_install.sh
game-renderer/: main.py  requirements.txt
scripts/: compile_lib_and_install.sh  test-library.sh  update_and_run.sh
state-processor/: Cargo.toml
state-processor/src/: core.rs  lib.rs  main.rs
state-processor/src/core/: entity_management.rs  game_state.rs  terrain.rs  time_management.rs
state-processor/src/core/entity_management/: death_calculations.rs
