[package]
name = "state-processor"
version = "0.1.0"
edition = "2024"

[lib]
name="state_processor"
crate-type=["cdylib"]

[dependencies]
glam = "0.30.9"
more-asserts = "0.3.1"
noise = "0.9.0"
numpy = "0.27.0"
pyo3 = { version = "0.27.1", features = ["extension-module"]}
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = "1.11.0"
roots = "0.0.8"
statrs = "0.18.0"
